--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
